1.Fixed Hamburger Current page color 2.Fixed Links to home page in data.html and marketing.html 3.Replaced new images at home page for training programs 4.Fixed navbar list not showing at fee page

--- a/fees.css
+++ b/fees.css
@@ -8150,7 +8150,7 @@
      }
    
      .navbar-link.w--current {
-       color: #1f2937;
+       color: #158e5e;
      }
    
      .navbar-button-wrapper {
@@ -8163,6 +8163,7 @@
      .navbar-dropdown-list {
        position: relative;
        overflow: hidden;
+       opacity: 1 !important;
      }
    
      .navbar-dropdown-list.w--open {
