--- a/index.css
+++ b/index.css
@@ -7631,7 +7631,7 @@
      }
    
      .navbar-link.w--current {
-       color: #1f2937;
+       color: #158e5e;
      }
    
      .navbar-button-wrapper {
